# silice-yowasp

./: .gitmodules  LICENSE.txt  README.md  build.sh  package-pypi.sh
pypi/: .gitignore  pyproject.toml  setup.py
pypi/yowasp_silice/: __init__.py
test/: blinky.si  test.py
